--- a/src/app/features/employe/page-employe/page-employe.component.html
+++ b/src/app/features/employe/page-employe/page-employe.component.html
@@ -1,4 +1,4 @@
-<main class="container mx-auto max-screen">
+<main class="container mx-auto max-w-screen-lg">
   <!-- Header -->
   <header class="mb-8 text-center">
     <h1 class="text-3xl font-bold mb-2 text-gray-800">
@@ -9,8 +9,8 @@
     </p>
   </header>
 
-  <!-- Section principale en deux lignes -->
-  <section class="grid grid-cols-1 gap-6">
+  <!-- Section principale sur 2 colonnes -->
+  <section class="grid grid-cols-1 md:grid-cols-2 gap-6">
     <!-- Formulaire -->
     <div class="shadow-md rounded-2xl p-6 hover:shadow-lg transition-shadow">
       <app-form></app-form>
